fix(tables): [PLTDA-2891]horizontal scrolling of the table does not work properly for the table header (#5242)
* fix(tables): [PLTDA-2891] header is now displayed properly when scrolled horizontally

* fix(tables): [PLTDA-2891] add the same fix for ticket fields 'All used values' table

* fix(tables): [PLTDA-2891] stylelint fix

* fix(tables): [PLTDA-2891] changes according to what we discussed on the call

* fix(tables): [PLTDA-2891] removed unnecessary import statement in less css files

--- a/src/pages/stats/AnalyticsTable.less
+++ b/src/pages/stats/AnalyticsTable.less
@@ -31,7 +31,7 @@
             }
 
             &:first-child {
-                td:first-child {
+                th:first-child {
                     z-index: 4;
                 }
             }
@@ -48,7 +48,7 @@
 
         tr {
             height: 56px;
-
+            th,
             td {
                 &.withShadow {
                     &:after {
@@ -59,7 +59,6 @@
                         bottom: -1px;
                         width: 30px;
                         box-shadow: inset 10px 0 8px -8px rgba(0, 0, 0, 0.15);
-
                         transform: translateX(100%);
                         pointer-events: none;
                     }
