--- a/src/pages/stats/BreakdownTable.less
+++ b/src/pages/stats/BreakdownTable.less
@@ -54,7 +54,7 @@
             }
 
             &:first-child {
-                td:first-child {
+                th:first-child {
                     z-index: 4;
                 }
             }
@@ -62,7 +62,7 @@
 
         tr {
             height: 40px;
-
+            th,
             td {
                 &.withShadow {
                     &:after {
@@ -73,7 +73,6 @@
                         bottom: -1px;
                         width: 30px;
                         box-shadow: inset 10px 0 8px -8px rgba(0, 0, 0, 0.15);
-
                         transform: translateX(100%);
                         pointer-events: none;
                     }
